--- a/app/views/home/hotels.html.erb
+++ b/app/views/home/hotels.html.erb
@@ -63,7 +63,7 @@
                   <button class="all_btn" style="padding: 14px 18px 14px 18px;"><i class="fa fa-globe" style="font-size: 32px;"></i></button>
                   </a>
                 </div>
-                <div class="column-4 w-col w-col-4" style="text-align: center; margin-left: 20px;">
+                <div class="column-4 w-col w-col-4" style="text-align: center; ">
                   <a href="https://goo.gl/maps/RpVZvxgQgVK2" target="_blank">
                   <button class="all_btn" style="padding: 12px 13px 10px 13px;"><i class="material-icons" style="font-size: 33px;">place</i></button>
                   </a>
@@ -89,12 +89,13 @@
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="https://www.marriott.com/hotels/travel/bomjw-jw-marriott-mumbai-juhu/" target="_blank">
-                  <button class="all_btn" style="    padding: 13px 20px; font-size: 24px;"><i class="fa fa-globe"></i></button>
+                  <button class="all_btn" style="padding: 14px 18px 14px 18px;"><i class="fa fa-globe" style="font-size: 32px;"></i></button>
+                  </a>
                 </a>
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="https://goo.gl/maps/iwJYovXcUfH2" target="_blank">
-                  <button class="all_btn" style="   padding: 17px 20px; font-size: 10px;"><i class="material-icons">place</i></button>
+                  <button class="all_btn" style="padding: 12px 13px 10px 13px;"><i class="material-icons" style="font-size: 33px;">place</i></button>
                 </a>
                 </div>
               </div>
@@ -118,12 +119,13 @@
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="https://www.hyatt.com/en-US/hotel/india/hyatt-regency-mumbai/mumba" target="_blank">
-                  <button class="all_btn" style="    padding: 13px 20px; font-size: 24px;"><i class="fa fa-globe"></i></button>
+                  <button class="all_btn" style="padding: 14px 18px 14px 18px;"><i class="fa fa-globe" style="font-size: 32px;"></i></button>
+                  </a>
                 </a>
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="https://goo.gl/maps/ykpySNXUgCR2" target="_blank">
-                  <button class="all_btn" style="    padding: 17px 20px; font-size: 10px;"><i class="material-icons">place</i></button>
+                  <button class="all_btn" style="padding: 12px 13px 10px 13px;"><i class="material-icons" style="font-size: 33px;">place</i></button>
                 </a>
                 </div>
               </div>
@@ -149,12 +151,13 @@
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="https://www.accorhotels.com/gb/hotel-6926-novotel-mumbai-juhu-beach/index.shtml" target="_blank">
-                  <button class="all_btn" style="    padding: 13px 20px; font-size: 24px;"><i class="fa fa-globe"></i></button>
+                  <button class="all_btn" style="padding: 14px 18px 14px 18px;"><i class="fa fa-globe" style="font-size: 32px;"></i></button>
+                  </a>
                 </a>
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="https://goo.gl/maps/P4aWtavYNC92" target="_blank">
-                  <button class="all_btn" style="    padding: 17px 20px; font-size: 10px;"><i class="material-icons">place</i></button>
+                  <button class="all_btn" style="padding: 12px 13px 10px 13px;"><i class="material-icons" style="font-size: 33px;">place</i></button>
                 </a>
                 </div>
               </div>
@@ -178,12 +181,13 @@
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="https://www.theleela.com/en_us/hotels-in-mumbai/the-leela-mumbai-hotel/" target="_blank">
-                  <button class="all_btn" style="    padding: 13px 20px; font-size: 24px;"><i class="fa fa-globe"></i></button>
+                  <button class="all_btn" style="padding: 14px 18px 14px 18px;"><i class="fa fa-globe" style="font-size: 32px;"></i></button>
+                  </a>
                 </a>
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="https://goo.gl/maps/JWPCH4THTDJ2" target="_blank">
-                  <button class="all_btn" style="    padding: 17px 20px; font-size: 10px;"><i class="material-icons">place</i></button>
+                  <button class="all_btn" style="padding: 12px 13px 10px 13px;"><i class="material-icons" style="font-size: 33px;">place</i></button>
                 </a>
                 </div>
               </div>
@@ -207,12 +211,13 @@
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="https://www.marriott.com/hotels/travel/bomcy-courtyard-mumbai-international-airport/?scid=bb1a189a-fec3-4d19-a255-54ba596febe2" target="_blank">
-                  <button class="all_btn" style="    padding: 13px 20px; font-size: 24px;"><i class="fa fa-globe"></i></button>
+                  <button class="all_btn" style="padding: 14px 18px 14px 18px;"><i class="fa fa-globe" style="font-size: 32px;"></i></button>
+                  </a>
                 </a>
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="https://goo.gl/maps/4eYeziEmR7y" target="_blank">
-                  <button class="all_btn" style="    padding: 17px 20px; font-size: 10px;"><i class="material-icons">place</i></button>
+                  <button class="all_btn" style="padding: 12px 13px 10px 13px;"><i class="material-icons" style="font-size: 33px;">place</i></button>
                 </a>
                 </div>
               </div>
@@ -238,12 +243,13 @@
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="https://www.thelalit.com/the-lalit-mumbai/" target="_blank">
-                  <button class="all_btn" style="    padding: 13px 20px; font-size: 24px;"><i class="fa fa-globe"></i></button>
+                  <button class="all_btn" style="padding: 14px 18px 14px 18px;"><i class="fa fa-globe" style="font-size: 32px;"></i></button>
+                  </a>
                 </a>
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="https://goo.gl/maps/8SEzXBvi5HB2" target="_blank">
-                  <button class="all_btn" style="    padding: 17px 20px; font-size: 10px;"><i class="material-icons">place</i></button>
+                  <button class="all_btn" style="padding: 12px 13px 10px 13px;"><i class="material-icons" style="font-size: 33px;">place</i></button>
                 </a>
                 </div>
               </div>
@@ -267,12 +273,13 @@
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="https://www.itchotels.in/hotels/mumbai/itcmaratha.html" target="_blank">
-                  <button class="all_btn" style="    padding: 13px 20px; font-size: 24px;"><i class="fa fa-globe"></i></button>
+                  <button class="all_btn" style="padding: 14px 18px 14px 18px;"><i class="fa fa-globe" style="font-size: 32px;"></i></button>
+                  </a>
                 </a>
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="https://goo.gl/maps/7NMaTFAg7wR2" target="_blank">
-                  <button class="all_btn" style="    padding: 17px 20px; font-size: 10px;"><i class="material-icons">place</i></button>
+                  <button class="all_btn" style="padding: 12px 13px 10px 13px;"><i class="material-icons" style="font-size: 33px;">place</i></button>
                 </a>
                 </div>
               </div>
@@ -296,12 +303,13 @@
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="https://www.ramadaplaza-juhu.com/" target="_blank">
-                  <button class="all_btn" style="    padding: 13px 20px; font-size: 24px;"><i class="fa fa-globe"></i></button>
+                  <button class="all_btn" style="padding: 14px 18px 14px 18px;"><i class="fa fa-globe" style="font-size: 32px;"></i></button>
+                  </a>
                 </a>
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="https://goo.gl/maps/rh8d96wMCKs" target="_blank">
-                  <button class="all_btn" style="    padding: 17px 20px; font-size: 10px;"><i class="material-icons">place</i></button>
+                  <button class="all_btn" style="padding: 12px 13px 10px 13px;"><i class="material-icons" style="font-size: 33px;">place</i></button>
                 </a>
                 </div>
               </div>
@@ -330,12 +338,13 @@
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="http://www.hotelkarl.com/" target="_blank">
-                  <button class="all_btn" style="    padding: 13px 20px; font-size: 24px;"><i class="fa fa-globe"></i></button>
+                  <button class="all_btn" style="padding: 14px 18px 14px 18px;"><i class="fa fa-globe" style="font-size: 32px;"></i></button>
+                  </a>
                   </a>
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="https://goo.gl/maps/gs5ujzCTRCT2" target="_blank">
-                  <button class="all_btn" style="  padding: 17px 20px; font-size: 10px;"><i class="material-icons">place</i></button>
+                  <button class="all_btn" style="padding: 12px 13px 10px 13px;"><i class="material-icons" style="font-size: 33px;">place</i></button>
                   </a>
                 </div>
               </div>
@@ -360,12 +369,13 @@
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="https://www.fabhotels.com/hotels-in-mumbai/fabhotel-byaris-international.html?utm_source=Google_Maps&utm_medium=organic&utm_campaign=Google_Maps_Clicks" target="_blank">
-                  <button class="all_btn" style="    padding: 13px 20px; font-size: 24px;"><i class="fa fa-globe"></i></button>
+                  <button class="all_btn" style="padding: 14px 18px 14px 18px;"><i class="fa fa-globe" style="font-size: 32px;"></i></button>
+                  </a>
                   </a>
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="https://goo.gl/maps/NCx2LF67PFB2" target="_blank">
-                  <button class="all_btn" style="  padding: 17px 20px; font-size: 10px;"><i class="material-icons">place</i></button>
+                  <button class="all_btn" style="padding: 12px 13px 10px 13px;"><i class="material-icons" style="font-size: 33px;">place</i></button>
                   </a>
                 </div>
               </div>
@@ -389,12 +399,13 @@
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="https://www.oyorooms.com/13814-budget-oyo-8373-rigga-inn-mumbai?utm_source=Google_gmb&utm_medium=Organic&utm_campaign=MUM536" target="_blank">
-                  <button class="all_btn" style="    padding: 13px 20px; font-size: 24px;"><i class="fa fa-globe"></i></button>
+                  <button class="all_btn" style="padding: 14px 18px 14px 18px;"><i class="fa fa-globe" style="font-size: 32px;"></i></button>
+                  </a>
                   </a>
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="https://goo.gl/maps/hunx37sa4hE2" target="_blank">
-                  <button class="all_btn" style="  padding: 17px 20px; font-size: 10px;"><i class="material-icons">place</i></button>
+                  <button class="all_btn" style="padding: 12px 13px 10px 13px;"><i class="material-icons" style="font-size: 33px;">place</i></button>
                   </a>
                 </div>
               </div>
@@ -419,12 +430,13 @@
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="http://www.hotelbeachgarden.com/" target="_blank">
-                  <button class="all_btn" style="    padding: 13px 20px; font-size: 24px;"><i class="fa fa-globe"></i></button>
+                  <button class="all_btn" style="padding: 14px 18px 14px 18px;"><i class="fa fa-globe" style="font-size: 32px;"></i></button>
+                  </a>
                   </a>
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="https://goo.gl/maps/mdpgCVHW4d22" target="_blank">
-                  <button class="all_btn" style="  padding: 17px 20px; font-size: 10px;"><i class="material-icons">place</i></button>
+                  <button class="all_btn" style="padding: 12px 13px 10px 13px;"><i class="material-icons" style="font-size: 33px;">place</i></button>
                   </a>
                 </div>
               </div>
@@ -448,12 +460,13 @@
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="http://hoteldelightmumbai.in/" target="_blank">
-                  <button class="all_btn" style="    padding: 13px 20px; font-size: 24px;"><i class="fa fa-globe"></i></button>
+                  <button class="all_btn" style="padding: 14px 18px 14px 18px;"><i class="fa fa-globe" style="font-size: 32px;"></i></button>
+                  </a>
                   </a>
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="https://goo.gl/maps/FSrAxMQnoRo" target="_blank">
-                  <button class="all_btn" style="  padding: 17px 20px; font-size: 10px;"><i class="material-icons">place</i></button>
+                  <button class="all_btn" style="padding: 12px 13px 10px 13px;"><i class="material-icons" style="font-size: 33px;">place</i></button>
                   </a>
                 </div>
               </div>
@@ -477,12 +490,13 @@
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="http://hotelparkviewmumbai.com/" target="_blank">
-                  <button class="all_btn" style="    padding: 13px 20px; font-size: 24px;"><i class="fa fa-globe"></i></button>
+                  <button class="all_btn" style="padding: 14px 18px 14px 18px;"><i class="fa fa-globe" style="font-size: 32px;"></i></button>
+                  </a>
                   </a>
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="https://goo.gl/maps/qWkkU7uK6XL2" target="_blank">
-                  <button class="all_btn" style="  padding: 17px 20px; font-size: 10px;"><i class="material-icons">place</i></button>
+                  <button class="all_btn" style="padding: 12px 13px 10px 13px;"><i class="material-icons" style="font-size: 33px;">place</i></button>
                   </a>
                 </div>
               </div>
@@ -509,12 +523,13 @@
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="hotelmidtownindia.com" target="_blank">
-                  <button class="all_btn" style="    padding: 13px 20px; font-size: 24px;"><i class="fa fa-globe"></i></button>
+                  <button class="all_btn" style="padding: 14px 18px 14px 18px;"><i class="fa fa-globe" style="font-size: 32px;"></i></button>
+                  </a>
                   </a>
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="https://goo.gl/maps/oMjtBmjXiqn" target="_blank">
-                  <button class="all_btn" style="  padding: 17px 20px; font-size: 10px;"><i class="material-icons">place</i></button>
+                  <button class="all_btn" style="padding: 12px 13px 10px 13px;"><i class="material-icons" style="font-size: 33px;">place</i></button>
                   </a>
                 </div>
               </div>
@@ -538,12 +553,13 @@
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="http://www.milanintl.com/" target="_blank">
-                  <button class="all_btn" style="    padding: 13px 20px; font-size: 24px;"><i class="fa fa-globe"></i></button>
+                  <button class="all_btn" style="padding: 14px 18px 14px 18px;"><i class="fa fa-globe" style="font-size: 32px;"></i></button>
+                  </a>
                   </a>
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="https://goo.gl/maps/6EfdxLhCDZN2" target="_blank">
-                  <button class="all_btn" style="  padding: 17px 20px; font-size: 10px;"><i class="material-icons">place</i></button>
+                  <button class="all_btn" style="padding: 12px 13px 10px 13px;"><i class="material-icons" style="font-size: 33px;">place</i></button>
                   </a>
                 </div>
               </div>
@@ -567,12 +583,12 @@
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="http://www.hotelalfainternational.com/" target="_blank">
-                  <button class="all_btn" style="    padding: 13px 20px; font-size: 24px;"><i class="fa fa-globe"></i></button>
+                  <button class="all_btn" style="padding: 14px 18px 14px 18px;"><i class="fa fa-globe" style="font-size: 32px;"></i></button>
                   </a>
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="https://goo.gl/maps/Lp7McLGQG8s" target="_blank">
-                  <button class="all_btn" style="  padding: 17px 20px; font-size: 10px;"><i class="material-icons">place</i></button>
+                  <button class="all_btn" style="padding: 12px 13px 10px 13px;"><i class="material-icons" style="font-size: 33px;">place</i></button>
                   </a>
                 </div>
               </div>
@@ -604,12 +620,12 @@
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="http://www.ontimeapartments.com/" target="_blank">
-                  <button class="all_btn" style="    padding: 13px 20px; font-size: 24px;"><i class="fa fa-globe"></i></button>
+                                    </a>
                   </a>
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="https://goo.gl/maps/kxPCd8VQgPD2" target="_blank">
-                  <button class="all_btn" style="  padding: 17px 20px; font-size: 10px;"><i class="material-icons">place</i></button>
+                  <button class="all_btn" style="padding: 12px 13px 10px 13px;"><i class="material-icons" style="font-size: 33px;">place</i></button>
                   </a>
                 </div>
               </div>
